[gd_scene load_steps=3 format=3 uid="uid://dr8fkyi2hosdp"]

[ext_resource type="Script" path="res://Assets/Scripts/Slot/slot.gd" id="1_l1nny"]
[ext_resource type="FontFile" uid="uid://cmtjmmt0xb1l5" path="res://Assets/Graphics/Font/ThaleahFat.ttf" id="2_as4mx"]

[node name="Slot" type="Node2D"]
script = ExtResource("1_l1nny")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(300, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="CardCount" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = 177.0
offset_right = 147.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_as4mx")
theme_override_font_sizes/font_size = 128
text = "50"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[connection signal="mouse_entered" from="ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_color_rect_mouse_exited"]
